refact : from 메서도로 변경 #35